# glpbud

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY_FIXES_SUMMARY.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  health.py  llm.py  logging_config.py  main.py  rate_limiter.py  schemas.py  validation.py  whisper.py
backend/db/: 001_core.sql  schema.sql  seed.py
backend/sql/: create_health_probe.sql
backend/tests/: test_api.py  test_integration.py  test_parse_contract.py  test_security.py  test_validation.py
backend/tools/: __init__.py  coaching.py  exercise.py  medication.py  nutrition.py
backend/worker/: main.py
ios/: SETUP_INSTRUCTIONS.md  SUPABASE_SETUP.md
ios/GLP1Coach/App/: GLP1CoachApp.swift
ios/GLP1Coach/App/Services/: APIClient.swift  BackgroundTaskManager.swift  NotificationsManager.swift  Store.swift
ios/GLP1Coach/GLP1Coach/: Components.swift  Config.swift  GLP1CoachApp.swift  Info.plist  Theme.swift
ios/GLP1Coach/GLP1Coach.xcodeproj/: project.pbxproj
ios/GLP1Coach/GLP1Coach/Components/: ImagePicker.swift
ios/GLP1Coach/GLP1Coach/Models/: DTOs.swift
ios/GLP1Coach/GLP1Coach/Services/: APIClient.swift  AuthManager.swift  DataStore.swift
ios/GLP1Coach/GLP1Coach/Utilities/: KeyboardUtils.swift  WeightUtils.swift
ios/GLP1Coach/GLP1CoachTests/: GLP1CoachTests.swift
ios/GLP1Coach/GLP1CoachUITests/: GLP1CoachUITests.swift  GLP1CoachUITestsLaunchTests.swift
ios/GLP1Coach/Models/: DTOs.swift
ios/fastlane/: Fastfile
ops/: fly.toml
ops/.github/workflows/: backend.yml  ios.yml
(+17 files in other folders)
